@@ -1,5 +1,8 @@
 *SVN*
 
+* Added ActionController#cookies[] as a reader for @cookies that'll return the value of the cookie instead of the cookie object itself.
+  NOTE: If you were using the old accessor, this could potentially break your code -- if you expect a full cookie object!
+
 * Added the opportunity to defined method_missing on a controller which will handle all requests for actions not otherwise defined #223 [timb]
 
 * Fixed AbstractRequest#remote_ip for users going through proxies - Patch #228 [Eric Hodel]
